# SOLON

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  HANDOVER-2026-03-24.md  Makefile  PRD.md  README.md  ROADMAP.md  VISION.md  go.mod  go.sum  package.json
.github/workflows/: ci.yml
cloud/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud/migrations/: 0001_initial.sql  0002_instances_tokens.sql  0003_teams.sql  0004_billing.sql  0005_oauth.sql  0006_open_signups.sql  0007_device_tokens.sql  0008_managed_hosting.sql  0009_managed_hosting_updated_at.sql
cloud/src/: index.ts  scheduled.ts  types.ts
cmd/solon/: main.go
dashboard/: index.html  package.json  tailwind.config.ts  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docker/: openclaw.Dockerfile  sandbox.Dockerfile
docs/: BRAND.md  HANDOVER-2026-03-31-evening.md  HANDOVER-2026-03-31.md  api.md  gtm.md  openshell-integration.md  v1.2-proposal.md
homebrew/: solon.rb
hosting/: .env.example  .gitignore  ARCHIVED.md  Caddyfile  HANDOVER.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  provision-nemoclaw.sh  tailwind.config.ts  wrangler.toml
install/: wrangler.toml
provisioner/: package.json  tsconfig.json  wrangler.toml
relay/: package-lock.json  package.json  tsconfig.json  wrangler.toml
relay/src/: index.ts
scripts/: smoke-test.sh  upload-model-r2.py
website/: astro.config.mjs  package.json  tailwind.config.mjs
(+265 files in other folders)
